fixes navbar spacing

--- a/public/styles.css
+++ b/public/styles.css
@@ -5,7 +5,7 @@
 body {
   text-align: center;
   background-image: linear-gradient(#131313 95%, #CE4223);
-  background-attachment: fixed; 
+  background-attachment: fixed;
   color: #EAEAEA;
   font-family: 'Titillium Web', sans-serif;
   margin: 0 auto;
@@ -35,7 +35,7 @@ a {
   grid-template-columns: repeat(6, 1fr);
   grid-template-rows: 1fr, 1fr;
   grid-gap: 45px;
-  padding-top: 80px; 
+  padding-top: 80px;
   align-self: center;
 }
 
@@ -81,11 +81,11 @@ a {
 }
 
 h2 {
-  display: inline-block;  
+  display: inline-block;
 }
 
-/* ==================================== 
-        Movie Detail Styles      
+/* ====================================
+        Movie Detail Styles
 ===================================== */
 
 .movie-grid {
@@ -199,12 +199,13 @@ nav {
   position: fixed;
   z-index: 100;
   width: 100%;
+  height: 75px;
   display: flex;
   justify-content: space-between;
   list-style-type: none;
   background-color: #212121;
   padding-top: 5px;
-  padding-bottom: 5px; 
+  padding-bottom: 5px;
   background-color: #363535;
 }
 
@@ -234,10 +235,18 @@ nav {
 }
 
 .Albrey {
-  display: flex; 
+  display: flex;
   flex-direction: column;
   justify-content: center;
   padding-right: 2em;
+}
+
+.Albrey-Junior {
+  margin: 0 auto;
+}
+
+#site-name {
+  margin-top: 12px;
 }
 
 .logo {
@@ -286,31 +295,9 @@ nav {
   font-size: 12px;
   background-color: white;
   background-image: url('searchicon.png');
-  background-position: 10px 10px; 
+  background-position: 10px 10px;
   background-repeat: no-repeat;
   padding: 6px 100px 6px 20px;
   -webkit-transition: width 0.4s ease-in-out;
   transition: width 0.4s ease-in-out;
 }
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
